--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
 		<nav class="main_nav">
 			<ul>
 				<li><a href="#">Student Initiatives</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/contact">Contact</a></li>
 			</ul>
-			
 		</nav>
 	</header>
 	
