--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 	<header>
@@ -21,6 +22,7 @@
 				<li><a href="#">Student Initiatives</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/contact">Contact</a></li>
+				<li><a href="/message">Message</a></li>
 			</ul>
 		</nav>
 	</header>
