Nearly working remove background button

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>KEA Events</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="indexBonus.js"></script>
+
 
 </head>
 <body>
@@ -36,7 +38,7 @@
 			</div>
 		
 			<div id="subscribe">
-				<button class="btn btn-outline-success"><a href="#">Subscribe to the Newsletter</a></button>
+				<button class="btn btn-outline-success" id="changeColorBtn"><a href="">Remove background colors</a></button>
 			</div>
 			
 		</article>
@@ -101,7 +103,7 @@
 				</ul>
 			</nav>
 
-			<button id="bottomButton"><a href="#">See more pages</a></button>
+			<button class="btn btn-outline-primary" id="bottomButton"><a href="#">See more pages</a></button>
 		</div>
 
 
