Working remove background button

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 			</div>
 		
 			<div id="subscribe">
-				<button class="btn btn-outline-success" id="changeColorBtn"><a href="">Remove background colors</a></button>
+				<button class="btn btn-info" id="changeColorBtn">Remove background colors</button>
 			</div>
 			
 		</article>
